[gsoc_threads] Merge from trunk.

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,22 @@
 # $Id$
 
 New in 2.6.0
+- Core
+  + Plug some memory leaks
+  + As always, bug fixes and some optimizations
+- Runtime
+  + added (experimental) URI::Escape 
+- Testing
+  + Improved test coverage of core parrot
+- Documentation
+  + Updated the Squaak tutorial to use modern NQP-rx and PCT
 - Platforms
   + The Fedora package 'parrot-devel' install the files for syntax-highlighting
-    and automatic indenting for the vim editor.
+    and automatic indenting for the vim editor
+- NQP-rx 
+  + Updated version included from http://github.com/perl6/nqp-rx includes
+    new or improved: regex backtracking, named assertions, interactive mode,
+    and setting (a minimal but useful runtime library)
 
 New in 2.5.0
 - Core
